--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #8dacdf;
-    color: rgb(207, 123, 123);
+    background-color: #df8dba;
+    color: rgb(199, 20, 20);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -29,8 +29,8 @@ body {
 }
 
 .escola{
-    background-image: linear-gradient(#424E61,#16CFF8);
-    color:white;
+    background-image: linear-gradient(#c25a8e,#d481b2);
+    color:rgb(250, 247, 247);
     display: flex;
     justify-content: center;
     align-items: center;
